--- a/app.yaml
+++ b/app.yaml
@@ -3,8 +3,8 @@ api_version: 1
 threadsafe: true
 
 handlers:
-- url: /css
-  static_dir: css
+- url: /static
+  static_dir: static
 
 - url: /.*
   script: todo.app
